deps/v8/test/message/fail/modules-export-illformed-class.out
*%(basename)s:5: SyntaxError: Unexpected token ']'
export class foo {[]};
                   ^
SyntaxError: Unexpected token ']'

